# Gradius

./: Animation.cpp  Animation.h  BorderObstacle.cpp  BorderObstacle.h  CMakeLists.txt  Controller.cpp  Controller.h  EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  EntityController.cpp  EntityController.h  EntityResource.cpp  EntityResource.h  EntityView.cpp  EntityView.h  Exception.cpp  Exception.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  Model.cpp  Model.h  Obstacle.cpp  Obstacle.h  PlayerBullet.cpp  PlayerBullet.h  PlayerShip.cpp  PlayerShip.h  README.MD  ScrollingEntity.cpp  ScrollingEntity.h  Singleton.h  StopWatch.cpp  StopWatch.h  Transformation.cpp  Transformation.h  View.cpp  (+4 more)
fonts/: pizzadudedotdk.txt
levels/: level.json  test.json
resources/: BigObstacle.ini  BorderObstacle.ini  BorderObstacle1_down.ini  BorderObstacle1_down.json  BorderObstacle1_up.ini  BorderObstacle1_up.json  Boss.ini  Comet.ini  EnemyBullet.ini  EnemyShip.ini  EnemyShip.json  EnemyShip1.ini  EnemyShip2.ini  HomingEnemyBullet.ini  PlayerBullet.ini  PlayerBullet.json  PlayerShip.ini  PlayerShip.json  SlowEnemyShip.ini
resources/sprites/: BigObstacle.ini  BorderObstacle.ini  Boss_1_Unshielded.ini  Boss_1_shielded.ini  Comet.ini  EnemyBullet.ini  EnemyLaser.ini  EnemyShip.ini  EnemyShip1.ini  PlayerLaser.ini  PlayerShip.ini  progressIndicator.ini
src/: Animation.cpp  Animation.h  BaseSprite.cpp  BaseSprite.h  Exception.cpp  Exception.h  Game.cpp  Game.h  Hitbox.cpp  Hitbox.h  Level.cpp  Level.h  Singleton.h  Sprite.cpp  Sprite.h  StopWatch.cpp  Transformation.cpp  Transformation.h  ini_configuration.cc  ini_configuration.hh  main.cpp
src/controllers/: Boss.cpp  Boss.h  Boss_1.cpp  Boss_1.h  Controller.cpp  Controller.h  EnemyBullet.cpp  EnemyBullet.h  EnemyShip.cpp  EnemyShip.h  EnemyShipAI1.cpp  EnemyShipAI1.h  EnemyShipAI2.cpp  EnemyShipAI2.h  Entity.cpp  Entity.h  HomingEntity.cpp  HomingEntity.h  PlayerBullet.cpp  PlayerBullet.h  PlayerShip.cpp  PlayerShip.h  ScrollingEntity.cpp  ScrollingEntity.h  Ship.cpp  Ship.h
src/models/: BorderObstacle.cpp  BorderObstacle.h  Boss.cpp  Boss.h  Boss_1.cpp  Boss_1.h  Bullet.cpp  Bullet.h  EnemyBullet.cpp  EnemyBullet.h  EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  Model.cpp  Model.h  Obstacle.cpp  Obstacle.h  (+10 more)
(+36 files in other folders)
